Replace Keycloak with self-hosted Spring Security + JWT auth
Removes Keycloak entirely (login UI, cross-origin cookie requirements,
and the resulting HTTPS/proxy-path complexity it forced) in favor of
a simple username/password login backed by our own /auth/register and
/auth/login endpoints, BCrypt-hashed passwords, and JWTs sent via the
Authorization header. First registered user is auto-promoted to
SUPER_ADMIN. Also fixes a latent bug where user IDs were derived from
hashCode() of Keycloak's UUID instead of a real database id.